@@ -21,15 +21,21 @@ let gFaasId // Set on first invocation.
 // The trigger types for which we support special handling.
 // https://docs.aws.amazon.com/lambda/latest/dg/lambda-services.html
 const TRIGGER_GENERIC = 1
-const TRIGGER_API_GATEWAY = 2
+const TRIGGER_API_GATEWAY = 2 // This includes Lambda URLs which use the same event format.
 const TRIGGER_SNS = 3
 const TRIGGER_SQS = 4
 const TRIGGER_S3_SINGLE_EVENT = 5
+const TRIGGER_ELB = 6 // Elastic Load Balancer, aka Application Load Balancer
 
 function triggerTypeFromEvent (event) {
-  if (event.requestContext && event.requestContext.requestId) {
-    return TRIGGER_API_GATEWAY
-  } else if (event.Records && event.Records.length >= 1) {
+  if (event.requestContext) {
+    if (event.requestContext.elb) {
+      return TRIGGER_ELB
+    } else if (event.requestContext.requestId) {
+      return TRIGGER_API_GATEWAY
+    }
+  }
+  if (event.Records && event.Records.length >= 1) {
     const eventSource = (event.Records[0].eventSource || // S3 and SQS
       event.Records[0].EventSource) // SNS
     if (eventSource === 'aws:sns') {
@@ -180,36 +186,42 @@ function setApiGatewayData (agent, trans, event, context, faasId, isColdStart) {
   }
   trans.setServiceContext(serviceContext)
 
+  const originSvcName = (
+    // `<url-id>.lambda-url.<region>.on.aws` indicates this is a Lambda URL.
+    requestContext.domainName && requestContext.domainPrefix &&
+      requestContext.domainName.startsWith(requestContext.domainPrefix + '.lambda-url.')
+      ? 'lambda url'
+      : 'api gateway')
   const cloudContext = {
     origin: {
       provider: 'aws',
       service: {
-        name: 'api gateway'
+        name: originSvcName
       },
       account: {
-        id: event && event.requestContext.accountId
+        id: requestContext.accountId
       }
     }
   }
   trans.setCloudContext(cloudContext)
 }
 
-/**
- * Set transaction data for HTTP-y triggers -- API Gateway -- from the
- * Lambda function result.
- */
-function setTransDataFromHttpyResult (err, result, trans, event, triggerType) {
+function setTransDataFromApiGatewayResult (err, result, trans, event) {
   if (err) {
     trans.result = 'HTTP 5xx'
+    trans._setOutcomeFromHttpStatusCode(500)
   } else if (result && result.statusCode) {
     trans.result = 'HTTP ' + result.statusCode.toString()[0] + 'xx'
+    trans._setOutcomeFromHttpStatusCode(result.statusCode)
   } else {
     trans.result = constants.RESULT_SUCCESS
+    trans._setOutcomeFromHttpStatusCode(200)
   }
 
   // This doc defines the format of API Gateway-triggered responses, from which
   // we can infer `transaction.context.response` values.
   // https://docs.aws.amazon.com/apigateway/latest/developerguide/http-api-develop-integrations-lambda.html#http-api-develop-integrations-lambda.response
+  // https://docs.aws.amazon.com/lambda/latest/dg/urls-invocation.html#urls-payloads
   if (err) {
     trans.res = {
       statusCode: 500
@@ -234,6 +246,84 @@ function setTransDataFromHttpyResult (err, result, trans, event, triggerType) {
       }
     }
   }
+}
+
+// https://docs.aws.amazon.com/lambda/latest/dg/services-alb.html
+function setElbData (agent, trans, event, context, faasId, isColdStart) {
+  trans.type = 'request'
+  let name
+  if (agent._conf.usePathAsTransactionName) {
+    name = `${event.httpMethod} ${event.path}`
+  } else {
+    name = `${event.httpMethod} unknown route`
+  }
+  trans.setDefaultName(name)
+  trans.req = { // Used by parsers.getContextFromRequest() for adding context to transaction and errors.
+    method: event.httpMethod,
+    url: event.path + (
+      event.queryStringParameters && Object.keys(event.queryStringParameters) > 0
+        ? '?' + querystring.encode(event.queryStringParameters)
+        : ''),
+    headers: event.normedHeaders,
+    body: event.body,
+    bodyIsBase64Encoded: event.isBase64Encoded
+  }
+
+  trans.setFaas(getFaasData(context, faasId, isColdStart, 'http'))
+
+  const targetGroupArn = event.requestContext.elb.targetGroupArn
+  const arnParts = targetGroupArn.split(':')
+  trans.setServiceContext({
+    origin: {
+      name: arnParts[5].split('/')[1],
+      id: targetGroupArn
+    }
+  })
+
+  trans.setCloudContext({
+    origin: {
+      provider: 'aws',
+      region: arnParts[3],
+      service: {
+        name: 'elb'
+      },
+      account: {
+        id: arnParts[4]
+      }
+    }
+  })
+}
+
+function setTransDataFromElbResult (err, result, trans) {
+  // ELB defaults to 502 Bad Gateway if there is an error or `result.statusCode`
+  // is missing or not an integer.
+  const validStatusCode = (
+    result && result.statusCode && typeof result.statusCode === 'number' && Number.isInteger(result.statusCode)
+      ? result.statusCode
+      : null
+  )
+
+  if (err) {
+    trans.result = 'HTTP 5xx'
+  } else if (validStatusCode) {
+    trans.result = 'HTTP ' + validStatusCode.toString()[0] + 'xx'
+  } else {
+    trans.result = 'HTTP 5xx'
+  }
+
+  // Set an appropriate pseudo `trans.res`, used by `parsers.getContextFromResponse()`.
+  if (err) {
+    trans.res = {
+      statusCode: 502
+    }
+  } else {
+    trans.res = {
+      statusCode: validStatusCode || 502,
+      headers: result.headers
+    }
+  }
+
+  trans._setOutcomeFromHttpStatusCode(validStatusCode || 502)
 }
 
 function setSqsData (agent, trans, event, context, faasId, isColdStart) {
@@ -352,12 +442,22 @@ function elasticApmAwsLambda (agent) {
   function endAndFlushTransaction (err, result, trans, event, context, triggerType, cb) {
     log.trace({ awsRequestId: context && context.awsRequestId }, 'lambda: fn end')
 
-    if (triggerType === TRIGGER_API_GATEWAY) {
-      setTransDataFromHttpyResult(err, result, trans, event, triggerType)
-    } else if (err) {
-      trans.result = constants.RESULT_FAILURE
-    } else {
-      trans.result = constants.RESULT_SUCCESS
+    switch (triggerType) {
+      case TRIGGER_API_GATEWAY:
+        setTransDataFromApiGatewayResult(err, result, trans, event)
+        break
+      case TRIGGER_ELB:
+        setTransDataFromElbResult(err, result, trans)
+        break
+      default:
+        if (err) {
+          trans.result = constants.RESULT_FAILURE
+          trans.setOutcome(constants.OUTCOME_FAILURE)
+        } else {
+          trans.result = constants.RESULT_SUCCESS
+          trans.setOutcome(constants.OUTCOME_SUCCESS)
+        }
+        break
     }
 
     if (err) {
@@ -366,9 +466,6 @@ function elasticApmAwsLambda (agent) {
       // currentSpan, because this error applies to the transaction, not any
       // sub-span.
       agent.captureError(err, { skipOutcome: true })
-      trans.setOutcome(constants.OUTCOME_FAILURE)
-    } else {
-      trans.setOutcome(constants.OUTCOME_SUCCESS)
     }
 
     trans.end()
@@ -415,7 +512,7 @@ function elasticApmAwsLambda (agent) {
   return function wrapLambda (type, fn) {
     if (typeof type === 'function') {
       fn = type
-      type = 'lambda'
+      type = 'request'
     }
     if (!agent._conf.active) {
       // Manual usage of `apm.lambda(...)` should be a no-op when not active.
@@ -454,7 +551,7 @@ function elasticApmAwsLambda (agent) {
       // Look for trace-context info in headers or messageAttributes.
       let traceparent
       let tracestate
-      if (triggerType === TRIGGER_API_GATEWAY && event.headers) {
+      if ((triggerType === TRIGGER_API_GATEWAY || triggerType === TRIGGER_ELB) && event.headers) {
         // https://docs.aws.amazon.com/apigateway/latest/developerguide/http-api-develop-integrations-lambda.html
         // says "Header names are lowercased." However, that isn't the case for
         // payload format version 1.0. We need lowercased headers for processing.
@@ -475,6 +572,9 @@ function elasticApmAwsLambda (agent) {
       switch (triggerType) {
         case TRIGGER_API_GATEWAY:
           setApiGatewayData(agent, trans, event, context, gFaasId, isColdStart)
+          break
+        case TRIGGER_ELB:
+          setElbData(agent, trans, event, context, gFaasId, isColdStart)
           break
         case TRIGGER_SQS:
           setSqsData(agent, trans, event, context, gFaasId, isColdStart)
