@@ -18,6 +18,25 @@ const {
   redactKeysFromPostedFormVariables
 } = require('./filters/sanitize-field-names')
 
+/**
+ * Extract appropriate `{transaction,error}.context.request` from an HTTP
+ * request object. This handles header and body capture and redaction
+ * according to the agent config.
+ *
+ * @param {Object} req - Typically `req` is a Node.js `http.IncomingMessage`
+ *    (https://nodejs.org/api/all.html#all_http_class-httpincomingmessage).
+ *    However, some cases (e.g. Lambda and Azure Functions instrumentation)
+ *    create a pseudo-req object that matches well enough for this function.
+ *    Some relevant fields: (TODO: document all used fields)
+ *    - `body` - The incoming request body, if available. The `json` and
+ *      `payload` fields are also checked to accomodate some web frameworks.
+ *    - `bodyIsBase64Encoded` - An optional boolean. If `true`, then the `body`
+ *      needs to be base64-decoded before inclusion and redaction. Used by
+ *      Lambda instrumentation in some cases (e.g. for ELB triggers).
+ * @param {Object} conf - The full agent configuration.
+ * @param {String} type - 'errors' or 'transactions'. Indicates if this req
+ *    is being captured for an APM error or transaction event.
+ */
 function getContextFromRequest (req, conf, type) {
   var captureBody = conf.captureBody === type || conf.captureBody === 'all'
 
@@ -52,6 +71,9 @@ function getContextFromRequest (req, conf, type) {
     } else if (Buffer.isBuffer(body)) {
       context.body = '<Buffer>'
     } else {
+      if (typeof body === 'string' && req.bodyIsBase64Encoded === true) {
+        body = Buffer.from(body, 'base64').toString('utf8')
+      }
       body = redactKeysFromPostedFormVariables(body, req.headers, conf.sanitizeFieldNamesRegExp)
       if (typeof body !== 'string') {
         body = tryJsonStringify(body) || stringify(body)
