@@ -1,0 +1,24 @@
+{
+    "requestContext": {
+        "elb": {
+            "targetGroupArn": "arn:aws:elasticloadbalancing:us-west-2:919493274929:targetgroup/my-target-group-1/e88598a9d8909e9f"
+        }
+    },
+    "httpMethod": "POST",
+    "path": "/foo/",
+    "queryStringParameters": {},
+    "headers": {
+        "accept": "*/*",
+        "content-length": "23",
+        "content-type": "application/x-www-form-urlencoded",
+        "host": "my-alb-598237592.us-west-2.elb.amazonaws.com",
+        "traceparent": "00-12345678901234567890123456789012-1234567890123456-01",
+        "user-agent": "curl/7.86.0",
+        "x-amzn-trace-id": "Root=1-63d18943-06b173755b217e7d2efa2249",
+        "x-forwarded-for": "1.2.3.4",
+        "x-forwarded-port": "80",
+        "x-forwarded-proto": "http"
+    },
+    "body": "aGFtPWVnZ3MmbXlUb2tlbj1zZWtyaXQ=",
+    "isBase64Encoded": true
+}
